# agora-mac-obs-studio

./: README.rst  azure-pipelines.yml
CI/: install-dependencies-osx.sh
UI/: CMakeLists.txt  ag-http-request.cpp  ag-http-request.hpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  window-basic-main.cpp  window-basic-main.hpp  window-init-agora-widget.cpp  window-init-agora-widget.hpp
UI/data/locale/: en-US.ini  zh-CN.ini
UI/forms/: AgoraWidget.ui  OBSBasic.ui
libobs/: CMakeLists.txt  obs-encoder.c
libobs/util/: platform-cocoa.m  platform.h
plugins/: CMakeLists.txt
plugins/mac-agora/: CMakeLists.txt  mac-agora-encoded-data.hpp  mac-agora-raw-data.hpp  mac-agora-rtc-engine.cpp  mac-agora-rtc-engine.hpp  mac-streaming-agora.cpp  mac-streaming-agora.hpp
plugins/obs-ffmpeg/: obs-ffmpeg-source.c
plugins/obs-outputs/: CMakeLists.txt
plugins/vlc-video/: CMakeLists.txt
plugins/win-capture/graphics-hook/: vulkan-capture.c
